--- a/bounty-hunter/package.json
+++ b/bounty-hunter/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "express": "^4.17.3",
+    "mongoose": "^6.2.6",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2"
   }
